core: fixed navbar having too large height in IE.

--- a/frontend/app/core/assets/navbar.css
+++ b/frontend/app/core/assets/navbar.css
@@ -66,7 +66,7 @@
 }
 @media (min-width: 768px) {
   .navbar {
-    min-height: initial;
+    min-height: 34px;
   }
   .navbar-default {
     background: linear-gradient(to bottom, #f8f8f8 70%, #f0f0f0);
